--- a/styles/components/_environment.scss
+++ b/styles/components/_environment.scss
@@ -3,10 +3,14 @@
     left: 0;
     top: 0;
     transform: translate(-50%, -50%);
-    border: 1px solid red;
+    border: 1px solid transparent;
     border-radius: 50%;
     width: $sun-diameter;
     height: $sun-diameter;
+
+    &.border{
+        border-color: $border-color;
+    }
 }
 
 .ground{
@@ -15,7 +19,11 @@
     bottom: -1px;
     width: 100%;
     height: 48px;
-    border-top: 1px solid red;
+    border-top: 1px solid transparent;
+
+    &.border{
+        border-color: $border-color;
+    }
 }
 
 .tree{
@@ -23,15 +31,23 @@
     position: absolute;
     width: 13px;
     height: 106px;
-    border: 1px solid red;
+    border: 1px solid transparent;
     margin-top: 160px;
     left: 83px;
+
+    &.border{
+        border-color: $border-color;
+        
+        &::after{
+            border-color: $border-color;
+        }
+    }
 
     &::after{
         @include abs_content;
         width: $crown-diameter;
         height: $crown-diameter;
-        border: 1px solid red;
+        border: 1px solid transparent;
         border-radius: 50%;
         left: 50%;
         transform: translate(-50%, -100%);
