--- a/styles/components/_house.scss
+++ b/styles/components/_house.scss
@@ -10,24 +10,34 @@
         border-left: 209px solid transparent;
         border-right: 209px solid transparent;
         border-bottom: 226px solid #FFF;
-        // border-bottom: 226px solid transparent;
         margin-top: -226px;
         margin-left: -33px;
-        filter: drop-shadow(0px 0px 1px red);
         z-index: 2;
+        
+        &.el-special{
+            filter: drop-shadow(0px 0px 1px $border-color);
+        }
 
         .round-window{
             @include center;
             width: 60px;
             height: 60px;
-            border: 1px solid red;
+            border: 1px solid transparent;
             border-radius: 50%;
             top: 132px;
+
+            &.border{
+                border-color: $border-color;
+
+                &::after{
+                    border-color: $border-color;
+                }
+            }
 
             &::after{
                 @include abs_content;
                 height: 100%;
-                border-right: 1px solid red;
+                border-right: 1px solid transparent;
                 width: 50%;
             }
         }
@@ -37,15 +47,23 @@
         @include center;
         width: 39px;
         height: 104px;
-        border: 1px solid red;
+        border: 1px solid transparent;
         margin-left: 110px;
         margin-top: -263px;
+
+        &.border{
+            border-color: $border-color;
+
+            &::before{
+                border-color: $border-color;
+            }
+        }
 
         &::before{
             @include abs_content;
             width: 56px;
             height: 14px;
-            border: 1px solid red;
+            border: 1px solid transparent;
             left: 50%;
             transform: translateX(-50%);
             margin-top: -16px;
@@ -66,7 +84,7 @@
     
     .house{
         position: relative;
-        border: 1px solid red;
+        border: 1px solid transparent;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
@@ -76,6 +94,10 @@
         grid-template-areas: 
         'ferestre'
         'usa';
+
+        &.border{
+            border-color: $border-color;
+        }
         
         .ferestre{
             grid-area: ferestre;
@@ -90,23 +112,37 @@
                 position: relative;
                 width: 101px;
                 height: 79px;
-                border: 1px solid red;
+                border: 1px solid transparent;
+
+                &.border{
+                    border-color: $border-color;
+
+                    &::before{
+                        border-color: $border-color;
+                    }
+                }
 
                 &::before{
                     @include abs_content;
                     width: 50%;
                     height: 100%;
-                    border-right: 1px solid red;
+                    border-right: 1px solid transparent;
                 }
 
                 &.four{
                     height: 81px;
 
+                    &.border{
+                        &::after{
+                            border-color: $border-color;
+                        }
+                    }
+
                     &::after{
                         @include abs_content;
                         width: 100%;
                         height: 50%;
-                        border-bottom: 1px solid red;
+                        border-bottom: 1px solid transparent;
                         margin-top: -1px;
                     }
                 }
@@ -118,15 +154,28 @@
             grid-area: usa;
             height: 106px;
             width: 59px;
-            border: 1px solid red;
+            border: 1px solid transparent;
             margin-left: -6px;
             margin-bottom: -1px;
+
+            &.border{
+                border-color: $border-color;
+
+                &::before{
+                    border-color: $border-color;
+                }
+
+                &::after{
+                    border-color: $border-color;
+                }
+            }
+            
 
             &::before{
                 @include abs_content;
                 width: 39px;
                 height: 31px;
-                border: 1px solid red;
+                border: 1px solid transparent;
                 left: 50%;
                 transform: translateX(-50%);
                 margin-top: 9px;
@@ -136,7 +185,7 @@
                 @include abs_content;
                 width: 4px;
                 height: 4px;
-                border: 1px solid red;
+                border: 1px solid transparent;
                 border-radius: 50%;
                 left: 1.5px;
                 top: 50%;
