--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,12 @@ body {
   border-bottom: 226px solid #FFF;
   margin-top: -226px;
   margin-left: -33px;
+  z-index: 2;
+}
+
+.house-holder .roof.el-special {
   -webkit-filter: drop-shadow(0px 0px 1px red);
           filter: drop-shadow(0px 0px 1px red);
-  z-index: 2;
 }
 
 .house-holder .roof .round-window {
@@ -58,16 +61,24 @@ body {
           transform: translate(-50%, -50%);
   width: 60px;
   height: 60px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   border-radius: 50%;
   top: 132px;
+}
+
+.house-holder .roof .round-window.border {
+  border-color: red;
+}
+
+.house-holder .roof .round-window.border::after {
+  border-color: red;
 }
 
 .house-holder .roof .round-window::after {
   content: '';
   position: absolute;
   height: 100%;
-  border-right: 1px solid red;
+  border-right: 1px solid transparent;
   width: 50%;
 }
 
@@ -79,9 +90,17 @@ body {
           transform: translate(-50%, -50%);
   width: 39px;
   height: 104px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   margin-left: 110px;
   margin-top: -263px;
+}
+
+.house-holder .chimney.border {
+  border-color: red;
+}
+
+.house-holder .chimney.border::before {
+  border-color: red;
 }
 
 .house-holder .chimney::before {
@@ -89,7 +108,7 @@ body {
   position: absolute;
   width: 56px;
   height: 14px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -112,7 +131,7 @@ body {
 
 .house-holder .house {
   position: relative;
-  border: 1px solid red;
+  border: 1px solid transparent;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr;
@@ -123,6 +142,10 @@ body {
   height: 250px;
   justify-items: center;
       grid-template-areas: 'ferestre' 'usa';
+}
+
+.house-holder .house.border {
+  border-color: red;
 }
 
 .house-holder .house .ferestre {
@@ -145,7 +168,15 @@ body {
   position: relative;
   width: 101px;
   height: 79px;
-  border: 1px solid red;
+  border: 1px solid transparent;
+}
+
+.house-holder .house .ferestre .fereastra.border {
+  border-color: red;
+}
+
+.house-holder .house .ferestre .fereastra.border::before {
+  border-color: red;
 }
 
 .house-holder .house .ferestre .fereastra::before {
@@ -153,11 +184,15 @@ body {
   position: absolute;
   width: 50%;
   height: 100%;
-  border-right: 1px solid red;
+  border-right: 1px solid transparent;
 }
 
 .house-holder .house .ferestre .fereastra.four {
   height: 81px;
+}
+
+.house-holder .house .ferestre .fereastra.four.border::after {
+  border-color: red;
 }
 
 .house-holder .house .ferestre .fereastra.four::after {
@@ -165,7 +200,7 @@ body {
   position: absolute;
   width: 100%;
   height: 50%;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid transparent;
   margin-top: -1px;
 }
 
@@ -176,9 +211,21 @@ body {
   grid-area: usa;
   height: 106px;
   width: 59px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   margin-left: -6px;
   margin-bottom: -1px;
+}
+
+.house-holder .house .usa.border {
+  border-color: red;
+}
+
+.house-holder .house .usa.border::before {
+  border-color: red;
+}
+
+.house-holder .house .usa.border::after {
+  border-color: red;
 }
 
 .house-holder .house .usa::before {
@@ -186,7 +233,7 @@ body {
   position: absolute;
   width: 39px;
   height: 31px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -198,7 +245,7 @@ body {
   position: absolute;
   width: 4px;
   height: 4px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   border-radius: 50%;
   left: 1.5px;
   top: 50%;
@@ -211,10 +258,14 @@ body {
   top: 0;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  border: 1px solid red;
+  border: 1px solid transparent;
   border-radius: 50%;
   width: 160px;
   height: 160px;
+}
+
+.sun.border {
+  border-color: red;
 }
 
 .ground {
@@ -223,7 +274,11 @@ body {
   bottom: -1px;
   width: 100%;
   height: 48px;
-  border-top: 1px solid red;
+  border-top: 1px solid transparent;
+}
+
+.ground.border {
+  border-color: red;
 }
 
 .tree {
@@ -235,9 +290,17 @@ body {
   position: absolute;
   width: 13px;
   height: 106px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   margin-top: 160px;
   left: 83px;
+}
+
+.tree.border {
+  border-color: red;
+}
+
+.tree.border::after {
+  border-color: red;
 }
 
 .tree::after {
@@ -245,7 +308,7 @@ body {
   position: absolute;
   width: 121px;
   height: 121px;
-  border: 1px solid red;
+  border: 1px solid transparent;
   border-radius: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -100%);
