--- a/styles/components/_customCheckbox.scss
+++ b/styles/components/_customCheckbox.scss
@@ -14,9 +14,9 @@
     &::after{
         position: absolute;
         content: attr(data-title);
-        width: 150px;
+        width: 100px;
         font-size: 14px;
-        background-color: black;
+        background-color: rgb(22, 22, 22);
         color: #fff;
         border-radius: 3px;
         text-align: center;
