--- a/styles/style.css
+++ b/styles/style.css
@@ -349,9 +349,9 @@ body {
 .check_holder::after {
   position: absolute;
   content: attr(data-title);
-  width: 150px;
+  width: 100px;
   font-size: 14px;
-  background-color: black;
+  background-color: #161616;
   color: #fff;
   border-radius: 3px;
   text-align: center;
